--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Домашняя коптильня Zolinger - купить оригинал здесь!</title>
     <link rel="shortcut icon" href="/statics/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700,300&amp;subset=cyrillic,latin" rel="stylesheet" type="text/css">
-    <link href="/statics/styles.css" rel="stylesheet" type="text/css">
+    <link href="statics/styles.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="/statics/arcticmodal/jquery.arcticmodal.css">
     <meta name="csrf-param" content="_csrf">
     <meta name="csrf-token" content="dkFhRkcyYU0uMzQcDkI.DjsMNnMCZRQJNCo.cSkEBgEdE0w2PwUALw==">
